# discord-rpc-client-rs

./: index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
src/: App.svelte  fonts.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: discord_rpc.rs  main.rs  system_tray.rs  window.rs
src/components/: ActivitySettings.svelte  TextInput.svelte  UserPreview.svelte
