[package]
name = "discord-rpc"
version = "0.0.0"
description = "A Discord RPC Client made with rust"
authors = ["BlankParticle"]
license = "MIT"
repository = ""
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["shell-open", "system-tray"] }
uuid = { version = "1.3.3", features = ["v4"] }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
color-eyre = "0.6.2"
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = "0.3.17"

[features]
custom-protocol = ["tauri/custom-protocol"]
